# kunskaps

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/models/: database_handler.py  error_response_model.py  meeting_model.py
app/routes/: meeting.py  transcribe.py
